@@ -1,7 +1,5 @@
 DIST AssaultCube_v1.0.2.tar.bz2 42673504 RMD160 d95f2d8b569aeb7e7dd9f7d654b51bae26635c54 SHA1 7b0ad8c1c3960eed59a14b22aa25d40afe080275 SHA256 d4de1b1154c8aceccc0e961b751d01fd506f359472a648b88c639f99eb18c795
 DIST AssaultCube_v1.0.4-Update.tar.bz2 3339841 RMD160 79f42b89953850e1ca58ee251593b353ef0359d7 SHA1 3e667802282955958031ca89e0c46ddb8b9c7920 SHA256 fa72e537ac29b6ba91438585b765185a6898e522c04d4c08f74910040648606c
-DIST assaultcube-1.0.4-Makefile.patch 1473 RMD160 bfb027db3a60ce7213f25dc4f77e2753098e18cb SHA1 21026dfa555991a41ad64aca02a8913d370dcd6e SHA256 b6cb7a9fef21cca67fdae70a5772494d3f670728cdb1b7260d3d690a6a3253ab
-DIST assaultcube-1.0.4-enet.patch 3788 RMD160 42326d3b8ae8041a84286602d14cf9ba66c78d64 SHA1 a4db7af1fc65e7416ab0e33c6e60f2eeb878fe4d SHA256 879ccc7cb4596f03a1622c6cc23bd0cd851595fa1f34b5dde329679ce880794d
-EBUILD assaultcube-1.0.4.ebuild 2537 RMD160 27b143ec65303b773dd49d94f5d2835394d21574 SHA1 2b4ca1c4bb67fc61c0f93887ea044e49889f44f3 SHA256 0085ffb851263f1b4782e4b9664745c80321ef46208e73412bba6bdc20b2a96a
-MISC ChangeLog 508 RMD160 8ead566504665a0fa7e01ef98376d16b8f7f0225 SHA1 da7afc08348e30c7ce19b914ba94523a1a2136df SHA256 d8267ca7f14b799abfbae5ea80855706cecaf2b5f62b301b8ddc83a8a28a8efc
+EBUILD assaultcube-1.0.4.ebuild 2350 RMD160 7a5d53c3507ec04df2cc106ddf957d56e0fabfae SHA1 2f86fb2279d1831ae3e641760b34c8d36835c065 SHA256 6a73537edbda12d5e43417f8305e2f9763c219d861d1b5a74b078c9452d91c88
+MISC ChangeLog 720 RMD160 b9e537688ab10883d9c2430910524390998c8ce5 SHA1 1e04094f5a3e60f87b2997703eebbeebb38a1648 SHA256 72620e187fd1d7762233a32b0d96cac7588ff93b9499e574cc810a82eff79e69
 MISC metadata.xml 229 RMD160 f0f6417bec31ce8baba6d476664f7210c8c84c98 SHA1 e5f94f5caadc6f843fc90bb7959570cd503676fd SHA256 3b08fca3c878bdfc4e7639f477dd542d55a4ab5dce39a475e82633071d13eb3f
