@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 May 2010; Michael Weber (xmw) <gentoo@xmw.de> assaultcube-1.0.4.ebuild:
+  Game initialization crashes with net-libs/enet, revert to the bundled
+  version. Remove unneeded autogen folder from documentation.
+
   12 May 2010; Michael Weber (xmw) <gentoo@xmw.de> assaultcube-1.0.4.ebuild:
   The enet.patch is only needed for the exact version 1.2 of enet, thanks to
   Paul Hartman <gentoo@h5n.us> for the report. Corrected typo in passing
